--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@adonisjs/core": "^5.4.2",
     "@adonisjs/lucid": "^16.3.2",
     "@adonisjs/repl": "^3.1.7",
+    "adonis5-swagger": "^1.3.3",
     "luxon": "^2.2.0",
     "pg": "^8.7.1",
     "phc-argon2": "^1.1.2",
