--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "scripts": {
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "node -r @adonisjs/assembler/build/register japaFile.ts"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.9",
+    "@types/supertest": "^2.0.11",
     "adonis-preset-ts": "^2.1.0",
+    "execa": "^5.1.1",
+    "get-port": "^5.1.1",
+    "japa": "^4.0.0",
     "pino-pretty": "^7.3.0",
+    "supertest": "^6.2.1",
     "typescript": "^4.5.4",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
