--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,11 +12,27 @@ jobs:
     steps:
       - uses: actions/checkout@v2
   
+  test:
+    name: "🧪 Tests"
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v2
+      script: |
+        NODE_ENV=${{secrets.ENV_TEST}} 
+        PG_HOST=${{secrets.DATABASE_HOST_TEST}} 
+        PG_PORT=${{secrets.DATABASE_PORT_TEST}} 
+        PG_USER=${{secrets.DATABASE_USER_TEST}} 
+        PG_PASSWORD=${{secrets.DATABASE_PASSWORD_TEST}} 
+        PG_DB_NAME=${{secrets.DATABASE_NAME_TEST}} 
+        npm test
+        
+  
   deployToTest:
     name: "⚡️ Deploy to test env"
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build, test]
     environment: 
       name: test
       url: 'https://api-capuche-dopale-test.herokuapp.com/'
@@ -33,7 +49,7 @@ jobs:
     name: "🚀 Deploy to prod env"
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [build, test]
     environment: 
       name: production
       url: 'https://api-capuche-dopale.herokuapp.com/'
