--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,14 +18,15 @@ jobs:
     needs: [build]
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      
+        
+      - run: npm install
       - run: |
           NODE_ENV=${{secrets.ENV_TEST}} 
           PG_HOST=${{secrets.DATABASE_HOST_TEST}} 
