--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,18 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - run: npm install
-      - run: NODE_ENV=${{secrets.ENV_TEST}} PG_HOST=${{secrets.DATABASE_HOST_TEST}} PG_PORT=${{secrets.DATABASE_PORT_TEST}} PG_USER=${{secrets.DATABASE_USER_TEST}} PG_PASSWORD=${{secrets.DATABASE_PASSWORD_TEST}} PG_DB_NAME=${{secrets.DATABASE_NAME_TEST}} npm test
+      - run: HOST=$HOST APP_KEY=$APP_KEY DRIVE_DISK=$DRIVE_DISK DB_CONNECTION=$DB_CONNECTION NODE_ENV=$NODE_ENV PG_HOST=$PG_HOST PG_PORT=$PG_PORT PG_USER=$PG_USER PG_PASSWORD=$PG_PASSWORD PG_DB_NAME=$PG_DB_NAME npm test
+        env:
+          HOST: 0.0.0.0
+          NODE_ENV: ${{secrets.ENV_TEST}}
+          PG_HOST: ${{secrets.DATABASE_HOST_TEST}}
+          PG_PORT: ${{secrets.DATABASE_PORT_TEST}}
+          PG_USER: ${{secrets.DATABASE_USER_TEST}}
+          PG_PASSWORD: ${{secrets.DATABASE_PASSWORD_TEST}}
+          PG_DB_NAME: ${{secrets.DATABASE_NAME_TEST}}
+          APP_KEY: ${{secrets.APP_KEY}}
+          DRIVE_DISK: local
+          DB_CONNECTION: pg
 
   deployToTest:
     name: "⚡️ Deploy to test env"
