--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "node_modules",
     "build"
   ],
+  "allowSyntheticDefaultImports": true,
   "compilerOptions": {
     "outDir": "build",
     "rootDir": "./",
