--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,16 +26,21 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - uses: harmon758/postgresql-action@v1
+        with:
+          postgresql version: "11"
+          postgresql db: scrumia
+
       - run: npm install
-      - run: HOST=$HOST APP_KEY=$APP_KEY DRIVE_DISK=$DRIVE_DISK DB_CONNECTION=$DB_CONNECTION NODE_ENV=$NODE_ENV PG_HOST=$PG_HOST PG_PORT=$PG_PORT PG_USER=$PG_USER PG_PASSWORD=$PG_PASSWORD PG_DB_NAME=$PG_DB_NAME npm test
+      - run: npm test
         env:
           HOST: 0.0.0.0
           NODE_ENV: ${{secrets.ENV_TEST}}
-          PG_HOST: ${{secrets.DATABASE_HOST_TEST}}
+          PG_HOST: localhost
           PG_PORT: ${{secrets.DATABASE_PORT_TEST}}
-          PG_USER: ${{secrets.DATABASE_USER_TEST}}
-          PG_PASSWORD: ${{secrets.DATABASE_PASSWORD_TEST}}
-          PG_DB_NAME: ${{secrets.DATABASE_NAME_TEST}}
+          PG_USER:
+          PG_PASSWORD:
+          PG_DB_NAME: scrumia
           APP_KEY: ${{secrets.APP_KEY}}
           DRIVE_DISK: local
           DB_CONNECTION: pg
