feat(request): delete automatically request with an expiration date passed

--- a/ace-manifest.json
+++ b/ace-manifest.json
@@ -1,5 +1,17 @@
 {
   "commands": {
+    "delete:request": {
+      "settings": {
+        "loadApp": true,
+        "stayAlive": false
+      },
+      "commandPath": "./commands/DeleteRequest",
+      "commandName": "delete:request",
+      "description": "",
+      "args": [],
+      "aliases": [],
+      "flags": []
+    },
     "dump:rcfile": {
       "settings": {},
       "commandPath": "@adonisjs/core/build/commands/DumpRc",
