--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           DRIVE_DISK: local
           DB_CONNECTION: pg
       
-      - uses: tintef/nyc-reporter-action
+      - uses: tintef/nyc-reporter-action@0.1.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
