--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
     "start": "node server.js",
-    "test": "node -r @adonisjs/assembler/build/register japaFile.ts"
+    "test": "node -r @adonisjs/assembler/build/register japaFile.ts",
+    "coverage": "nyc npm run test"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.9",
@@ -15,6 +16,7 @@
     "execa": "^5.1.1",
     "get-port": "^5.1.1",
     "japa": "^4.0.0",
+    "nyc": "^15.1.0",
     "pino-pretty": "^7.3.0",
     "supertest": "^6.2.1",
     "typescript": "^4.5.4",
