--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,34 +44,40 @@ jobs:
           APP_KEY: ${{secrets.APP_KEY}}
           DRIVE_DISK: local
           DB_CONNECTION: pg
-
-  deployToTest:
-    name: "⚡️ Deploy to test env"
+  
+  deployToReview:
+    name: "🧐 Deploy to review env"
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     needs: [build, test]
-    environment:
-      name: test
-      url: "https://api-capuche-dopale-test.herokuapp.com/"
-
+    
     steps:
-      - uses: actions/checkout@v2
-      # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-      #   with:
-      #     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-      #     heroku_app_name: ${{secrets.HEROKU_APP_NAME_TEST}}
-      #     heroku_email: ${{secrets.HEROKU_MAIL}}
-
       - name: Heroku Review Application
         uses: mheap/github-action-pr-heroku-review-app@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HEROKU_API_TOKEN: ${{secrets.HEROKU_API_KEY}}
           HEROKU_PIPELINE_ID: ${{secrets.HEROKU_PIPELINE_ID}}
+  
+  deployToStaging:
+    name: "⚡️ Deploy to staging env"
+    if: github.event.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    environment:
+      name: staging
+      url: "https://api-capuche-dopale-test.herokuapp.com/"
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+           heroku_app_name: ${{secrets.HEROKU_APP_NAME_TEST}}
+           heroku_email: ${{secrets.HEROKU_MAIL}}
 
   deployToProd:
     name: "🚀 Deploy to prod env"
-    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     needs: [build, test]
     environment:
