--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,13 +44,13 @@ jobs:
           APP_KEY: ${{secrets.APP_KEY}}
           DRIVE_DISK: local
           DB_CONNECTION: pg
-  
+
   deployToReview:
     name: "🧐 Deploy to review env"
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     needs: [build, test]
-    
+
     steps:
       - name: Heroku Review Application
         uses: mheap/github-action-pr-heroku-review-app@master
@@ -58,7 +58,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HEROKU_API_TOKEN: ${{secrets.HEROKU_API_KEY}}
           HEROKU_PIPELINE_ID: ${{secrets.HEROKU_PIPELINE_ID}}
-  
+
   deployToStaging:
     name: "⚡️ Deploy to staging env"
     if: github.event.ref == 'refs/heads/main'
@@ -72,14 +72,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
-           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-           heroku_app_name: ${{secrets.HEROKU_APP_NAME_TEST}}
-           heroku_email: ${{secrets.HEROKU_MAIL}}
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME_TEST}}
+          heroku_email: ${{secrets.HEROKU_MAIL}}
 
   deployToProd:
     name: "🚀 Deploy to prod env"
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [deployToStaging]
     environment:
       name: production
       url: "https://api-capuche-dopale.herokuapp.com/"
