--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
 
   deployToStaging:
     name: "⚡️ Deploy to staging env"
-    if: github.event.pull_request.merged == 'true'
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     needs: [build, test]
     environment:
